# chessEngine2

./: .gitignore  CMakeLists.txt  README.md
src/definitions/: board.cpp  board.h  enums.h  move.cpp  move.h  moveGeneration.cpp  moveGeneration.h  moveStructs.cpp  moveStructs.h  nonSlidersAttacks.cpp  nonSlidersAttacks.h  slidersAttacks.cpp  slidersAttacks.h  std_typedef.h  zobristKey.cpp  zobristKey.h
src/evaluation/: attack.cpp  attack.h  bishop.cpp  bishop.h  center_control.cpp  center_control.h  eval_functions.cpp  eval_functions.h  mainEvaluation.cpp  mainEvaluation.h  main_evaluation.cpp  main_evaluation.h  mobility.cpp  mobility.h  pawn_structure.cpp  pawn_structure.h  pieceTables.cpp  pieceTables.h
src/main/: main.cpp
src/search/: hash_table.cpp  hash_table.h  main_search.cpp  main_search.h  move_ordering.cpp  move_ordering.h
src/ui/: uci.cpp  uci.h
src/utils/: bitops.cpp  bitops.h  board_utils.cpp  board_utils.h  fen.cpp  fen.h  helpers.cpp  helpers.h
tests/: test1.cpp  test2.cpp
tests/definitions/: perft.cpp
tests/ui/: uci.cpp
